--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 <!--                        <img class="mobile lazyload" src=""-->
 <!--                             data-src="https://www.totemtec.com/media/industry-cases/1588063190.263668-1.jpg"/>-->
 
-                        <div class="img-box" style="background: url('../cdn.gear.chilunyc.com/media/industry-cases/1588063190.263668-1.jpg');background-size: cover"></div>
+                        <div class="img-box" style="background: url('http://www.totemtec.com/media/industry-cases/1588063190.263668-1.jpg');background-size: cover"></div>
                         <div class="industry-info">
                             <p class="gear-dec-primary">疫情期间线下教育机构如何转型？</p>
                             <p class="gear-dec-secondary">目前来看，线上教育迎来“爆发式的风口”...</p>
